重构文件系统索引，磁盘为 source of truth，新增 CRC32 校验
- 重新定义 LantingFS 设计原则：磁盘为 source of truth，DB 索引为派生加速数据
- lanting_file_index 表新增 crc32 字段，字段类型改为 BIGINT
- FileIndexService 增加 CRC32 计算，写路径内存计算避免重复读盘
- reconcile 增加 mtime/CRC32 不一致检测
- GlobalExceptionHandler 移至 config 包，新增 ContentInconsistentException 处理
- PageResult 新增 hasMore 字段，支持游标/未知总数分页
- FileLockService 简化 clearLock，只清内存锁不操作数据库
- WorkspaceService 解耦 FileIndexService，Git 资源改用 try-with-resources，修复路径解析
- GitFileService 锁重命名 workspaceLock → gitWriteLock
- 新增 BaseIntegrationTest 测试基类
- 更新 file-system 系列 spec 及 testing-spec 文档，新增 pagination-spec